chore: migrate from lerna to nx

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "private": true,
   "license": "Apache-2.0",
-  "version": "0.0.0",
+  "version": "1.57.0",
   "scripts": {
-    "build": "lerna run build --stream --sort --concurrency=1",
-    "lint": "lerna run lint --stream --sort",
-    "lint:fix": "lerna run lint:fix --stream --sort",
+    "build": "yarn nx run-many --target=build --all",
+    "lint": "yarn nx run-many --target=lint --all",
+    "lint:fix": "yarn nx run-many --target=lint:fix --all",
     "bump": "bash scripts/bump.sh",
-    "dist-clean": "lerna run dist-clean --stream && rm -rf dist",
+    "dist-clean": "yarn nx run-many --target=dist-clean --all && rm -rf dist",
     "package": "bash scripts/package.sh",
-    "test": "lerna run test --concurrency=1 --stream && yarn compliance",
-    "test:integ": "lerna run test:integ --stream",
-    "test:update": "lerna run test:update --concurrency=1 --stream",
+    "test": "yarn nx run-many --target=test --all && yarn compliance",
+    "test:integ": "yarn nx run-many --target=test:integ --all",
+    "test:update": "yarn nx run-many --target=test:update --all",
     "compliance": "(cd tools/jsii-compliance && yarn report)"
   },
   "devDependencies": {
@@ -27,7 +27,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest-circus": "^27.5.1",
     "jest-config": "^27.5.1",
-    "lerna": "^4.0.0",
+    "nx": "14.1.1",
     "prettier": "^2.6.2",
     "standard-version": "^9.3.2",
     "ts-jest": "^27.1.4",
