--- a/packages/jsii-calc/package.json
+++ b/packages/jsii-calc/package.json
@@ -123,5 +123,27 @@
         "maintainer"
       ]
     }
-  ]
+  ],
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "**/*.d.ts",
+          "**/*.js",
+          ".jsii",
+          ".jsii.tabl.json",
+          "tsconfig.json",
+          "*.tsbuildinfo"
+        ]
+      },
+      "lint": {
+        "outputs": []
+      },
+      "test": {
+        "outputs": [
+          "coverage/**"
+        ]
+      }
+    }
+  }
 }
