--- a/packages/jsii-diff/package.json
+++ b/packages/jsii-diff/package.json
@@ -52,5 +52,28 @@
     "jsii": "^0.0.0",
     "jsii-build-tools": "^0.0.0",
     "prettier": "^2.6.2"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "bin/**/*.d.ts",
+          "bin/**/*.js",
+          "lib/**/*.d.ts",
+          "lib/**/*.js",
+          "test/**/*.d.ts",
+          "test/**/*.js",
+          "*.tsbuildinfo"
+        ]
+      },
+      "lint": {
+        "outputs": []
+      },
+      "test": {
+        "outputs": [
+          "coverage/**"
+        ]
+      }
+    }
   }
 }
