--- a/packages/@jsii/check-node/package.json
+++ b/packages/@jsii/check-node/package.json
@@ -44,5 +44,23 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^12.20.48",
     "jest": "^27.5.1"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "lib/**",
+          "*.tsbuildinfo"
+        ]
+      },
+      "lint": {
+        "outputs": []
+      },
+      "test": {
+        "outputs": [
+          "coverage/**"
+        ]
+      }
+    }
   }
 }
