--- a/packages/@jsii/java-runtime/package.json
+++ b/packages/@jsii/java-runtime/package.json
@@ -36,5 +36,24 @@
     "@types/node": "^12.20.48",
     "jsii-build-tools": "^0.0.0",
     "typescript": "~3.9.10"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "lib/**/*.d.ts",
+          "lib/**/*.js",
+          "maven-repo/**",
+          "project/pom.xml",
+          "project/user.xml",
+          "project/src/main/**/BundledRuntime.java",
+          "project/src/main/**/JsiiVersion.java",
+          "*.tsbuildinfo"
+        ]
+      },
+      "lint": {
+        "outputs": []
+      }
+    }
   }
 }
