--- a/packages/@jsii/spec/package.json
+++ b/packages/@jsii/spec/package.json
@@ -42,5 +42,25 @@
     "prettier": "^2.6.2",
     "typescript": "~3.9.10",
     "typescript-json-schema": "^0.53.0"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "**/*.d.ts",
+          "**/*.js",
+          "schema/**",
+          "**/*.tsbuildinfo"
+        ]
+      },
+      "lint": {
+        "outputs": []
+      },
+      "test": {
+        "outputs": [
+          "coverage/**"
+        ]
+      }
+    }
   }
 }
