--- a/packages/codemaker/package.json
+++ b/packages/codemaker/package.json
@@ -43,5 +43,24 @@
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "typescript": "~3.9.10"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": [
+          "lib/**/*.d.ts",
+          "lib/**/*.js",
+          "*.tsbuildinfo"
+        ]
+      },
+      "lint": {
+        "outputs": []
+      },
+      "test": {
+        "outputs": [
+          "coverage/**"
+        ]
+      }
+    }
   }
 }
