--- a/tools/jsii-build-tools/package.json
+++ b/tools/jsii-build-tools/package.json
@@ -35,5 +35,12 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "diff": "^5.0.0"
+  },
+  "nx": {
+    "targets": {
+      "build": {
+        "outputs": []
+      }
+    }
   }
 }
