--- a/tsconfig-base.json
+++ b/tsconfig-base.json
@@ -9,7 +9,8 @@
     "declaration": true,                   /* Generates corresponding '.d.ts' file. */
     "declarationMap": true,                /* Generates declaration map '.d.ts.map' file. */
     "esModuleInterop": false,              /* Turn on babel and typesystem compatibility with ES modules */
-    "inlineSourceMap": true,               /* Emit a single file with source maps instead of having a separate file. */
+    "sourceMap": true,                     /* Generates source file .js.map file. */
+    "inlineSourceMap": false,              /* Emit a single file with source maps instead of having a separate file. */
     "inlineSources": true,                 /* Emit the source alongside the sourcemaps within a single file. */
     "noUnusedLocals": true,                /* Report errors on unused locals. */
     "noUnusedParameters": true,            /* Report errors on unused parameters. */
