chore(@jsii/kernel): build out-of-tree

--- a/packages/@jsii/kernel/tsconfig.json
+++ b/packages/@jsii/kernel/tsconfig.json
@@ -1,8 +1,15 @@
 {
   "extends": "../../../tsconfig-base",
-  "include": ["**/*.ts"],
-  "exclude": ["jest.config.ts"],
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "lib",
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
   "references": [
-    { "path": "../spec" },
+    {
+      "path": "../spec"
+    },
   ],
 }
