--- a/.github/workflows/yarn-upgrade.yml
+++ b/.github/workflows/yarn-upgrade.yml
@@ -70,13 +70,13 @@ jobs:
         # We special-case typescript because it's not semantically versionned, and major.minor is the API contract
         run: |-
           # Upgrade devDependencies at repository root
-          ncu --upgrade --target=minor --filter=@types/node,ts-jest,@jest/types,jest-config,jest-circus
+          ncu --upgrade --target=minor --filter=@types/node,@jest/types,jest-config,jest-circus
           ncu --upgrade --target=patch --filter=typescript
-          ncu --upgrade --target=latest --reject=@types/node,typescript,ts-jest,@jest/types,jest-config,jest-circus
+          ncu --upgrade --target=latest --reject=@types/node,typescript,@jest/types,jest-config,jest-circus
 
           # Upgrade all production dependencies (and other always major-pinned dependencies)
           lerna exec --parallel ncu -- --upgrade --target=minor                                     \
-            --filter='ts-jest,${{ steps.production-dependencies.outputs.list }}'                            \
+            --filter='${{ steps.production-dependencies.outputs.list }}'                            \
             --reject='typescript,${{ steps.monorepo-packages.outputs.list }}'
 
           # Upgrade all minor-pinned dependencies
@@ -85,7 +85,7 @@ jobs:
 
           # Upgrade all other dependencies (devDependencies) to the latest
           lerna exec --parallel ncu -- --upgrade --target=latest                                    \
-            --reject='@types/node,typescript,ts-jest,${{ steps.production-dependencies.outputs.list }},${{ steps.monorepo-packages.outputs.list }}'
+            --reject='@types/node,typescript,${{ steps.production-dependencies.outputs.list }},${{ steps.monorepo-packages.outputs.list }}'
 
       # This will ensure the current lockfile is up-to-date with the dependency specifications (necessary for "yarn update" to run)
       - name: Run "yarn install"
