chore(@jsii/kernel): build out-of-tree (#3535)
---

By submitting this pull request, I confirm that my contribution is made under the terms of the [Apache 2.0 license].

[Apache 2.0 license]: https://www.apache.org/licenses/LICENSE-2.0

--- a/packages/@jsii/kernel/.npmignore
+++ b/packages/@jsii/kernel/.npmignore
@@ -1,9 +1,13 @@
-# Don't include original .ts files when doing `npm pack`
-*.ts
-!*.d.ts
+# Don't include the original source files
+/src/
 
-# Don't include various configuration & state information
-coverage
-.eslintrc.*
+# Don't include test files
+/coverage/
+/lib/**/*.test.*
+
+# No build tools & configuration
+/.eslintrc.yaml
+/jest.config.ts
 tsconfig.json
+*.map
 *.tsbuildinfo
