chore: build all packages with TypeScript 4.6
Use TypeScript 4.6 for building all packages, but continue to use
TypeScript 3.9 in the compiler and rosetta in order to avoid introducing
breaking changes.

Moved several "universal" devDependencies all the way to the root of the
mono-repository to minimize changes when updating these (`@types/jest`,
`jest`, `eslint`, etc...).

Some code changes were required due to the breaking changes introduced
between TypeScript 3.9 and 4.6, but nothing particularly substantial.
There seems to be an odd interaction between webpack and actually
importing `node:process`, so the `jsii/runtime` package switched to
using the global `process` value instead of importing the module.

--- a/packages/@jsii/kernel/package.json
+++ b/packages/@jsii/kernel/package.json
@@ -32,22 +32,16 @@
   },
   "dependencies": {
     "@jsii/spec": "^0.0.0",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.1.0",
     "tar": "^6.1.11"
   },
   "devDependencies": {
     "@scope/jsii-calc-base": "^0.0.0",
     "@scope/jsii-calc-lib": "^0.0.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^12.20.51",
     "@types/tar": "^6.1.1",
-    "eslint": "^8.15.0",
-    "jest": "^27.5.1",
     "jest-expect-message": "^1.0.2",
     "jsii-build-tools": "^0.0.0",
-    "jsii-calc": "^3.20.120",
-    "prettier": "^2.6.2",
-    "typescript": "~3.9.10"
+    "jsii-calc": "^3.20.120"
   }
 }
