--- a/packages/@jsii/java-runtime/package.json
+++ b/packages/@jsii/java-runtime/package.json
@@ -34,7 +34,6 @@
   "devDependencies": {
     "@jsii/runtime": "^0.0.0",
     "@types/node": "^12.20.51",
-    "jsii-build-tools": "^0.0.0",
-    "typescript": "~3.9.10"
+    "jsii-build-tools": "^0.0.0"
   }
 }
