--- a/packages/@scope/jsii-calc-base-of-base/package.json
+++ b/packages/@scope/jsii-calc-base-of-base/package.json
@@ -33,8 +33,7 @@
     "@types/node": "^12.20.51",
     "jsii": "^0.0.0",
     "jsii-build-tools": "^0.0.0",
-    "jsii-rosetta": "^0.0.0",
-    "prettier": "^2.6.2"
+    "jsii-rosetta": "^0.0.0"
   },
   "jsii": {
     "outdir": "dist",
