--- a/packages/jsii-calc/package.json
+++ b/packages/jsii-calc/package.json
@@ -52,11 +52,9 @@
   },
   "devDependencies": {
     "@types/node": "^12.20.51",
-    "eslint": "^8.15.0",
     "jsii": "^0.0.0",
     "jsii-build-tools": "^0.0.0",
-    "jsii-rosetta": "^0.0.0",
-    "prettier": "^2.6.2"
+    "jsii-rosetta": "^0.0.0"
   },
   "jsii": {
     "outdir": "dist",
