--- a/packages/jsii-diff/package.json
+++ b/packages/jsii-diff/package.json
@@ -35,22 +35,16 @@
   "dependencies": {
     "@jsii/check-node": "0.0.0",
     "@jsii/spec": "^0.0.0",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.1.0",
     "jsii-reflect": "^0.0.0",
     "log4js": "^6.4.6",
-    "typescript": "~3.9.10",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.5.0",
-    "@types/node": "^12.20.51",
     "@types/tar-fs": "^2.0.1",
-    "eslint": "^8.15.0",
-    "jest": "^27.5.1",
     "jest-expect-message": "^1.0.2",
     "jsii": "^0.0.0",
-    "jsii-build-tools": "^0.0.0",
-    "prettier": "^2.6.2"
+    "jsii-build-tools": "^0.0.0"
   }
 }
