--- a/packages/oo-ascii-tree/package.json
+++ b/packages/oo-ascii-tree/package.json
@@ -31,12 +31,6 @@
     "package": "package-js"
   },
   "devDependencies": {
-    "@types/jest": "^27.5.0",
-    "@types/node": "^12.20.51",
-    "eslint": "^8.15.0",
-    "jest": "^27.5.1",
-    "jsii-build-tools": "^0.0.0",
-    "prettier": "^2.6.2",
-    "typescript": "~3.9.10"
+    "jsii-build-tools": "^0.0.0"
   }
 }
