--- a/tools/jsii-compliance/package.json
+++ b/tools/jsii-compliance/package.json
@@ -17,9 +17,6 @@
   },
   "devDependencies": {
     "@types/node": "^12.20.51",
-    "eslint": "^8.15.0",
-    "prettier": "^2.6.2",
-    "ts-node": "^10.7.0",
-    "typescript": "~3.9.10"
+    "ts-node": "^10.7.0"
   }
 }
