--- a/packages/@jsii/python-runtime/package.json
+++ b/packages/@jsii/python-runtime/package.json
@@ -40,7 +40,6 @@
     "fs-extra": "^10.1.0",
     "jsii-build-tools": "^0.0.0",
     "jsii-calc": "^3.20.120",
-    "jsii-pacmak": "^0.0.0",
-    "ts-node": "^10.7.0"
+    "jsii-pacmak": "^0.0.0"
   }
 }
