--- a/packages/@jsii/dotnet-runtime/package.json
+++ b/packages/@jsii/dotnet-runtime/package.json
@@ -39,10 +39,8 @@
   },
   "devDependencies": {
     "@jsii/runtime": "^0.0.0",
-    "@types/node": "^12.20.51",
     "@types/semver": "^7.3.9",
     "jsii-build-tools": "^0.0.0",
-    "semver": "^7.3.7",
-    "typescript": "~3.9.10"
+    "semver": "^7.3.7"
   }
 }
