feat(jsii): make source map behavior fully configurable
Instead of enabling declarations maps everywhere as was done in #3521,
allow customers to define their desired source-map related configuration
in the `jsii.tsc` stanza of `package.json`.

This change in stance is motivated by how introduction of declarations
map causes broad asset hash changes in consumer code, which effectively
breaks many snapshot-based regression tests, and this feature should
hence be opt-in.

--- a/packages/@scope/jsii-calc-lib/package.json
+++ b/packages/@scope/jsii-calc-lib/package.json
@@ -69,7 +69,8 @@
       }
     },
     "tsc": {
-      "outDir": "build"
+      "outDir": "build",
+      "sourceMap": false
     },
     "versionFormat": "short",
     "metadata": {
