fix: speed up assembly validation by 20x for large libraries

--- a/packages/@jsii/spec/package.json
+++ b/packages/@jsii/spec/package.json
@@ -31,7 +31,7 @@
     "package": "package-js"
   },
   "dependencies": {
-    "jsonschema": "^1.4.1"
+    "ajv": "^8.11.0"
   },
   "devDependencies": {
     "jsii-build-tools": "^0.0.0",
