--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1393,6 +1393,15 @@
       "contributions": [
         "bug"
       ]
+    },
+    {
+      "login": "skuenzli",
+      "name": "Stephen Kuenzli",
+      "avatar_url": "https://avatars.githubusercontent.com/u/869201?v=4",
+      "profile": "https://github.com/skuenzli",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "repoType": "github",
