--- a/packages/jsii/package.json
+++ b/packages/jsii/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@jsii/check-node": "0.0.0",
     "@jsii/spec": "^0.0.0",
+    "@jsii/utils": "^0.0.0",
     "case": "^1.6.3",
     "chalk": "^4",
     "deep-equal": "^2.0.5",
