chore(oo-ascii-tree): build out-of-tree

--- a/packages/oo-ascii-tree/.gitignore
+++ b/packages/oo-ascii-tree/.gitignore
@@ -1,20 +1,3 @@
-.vscode
-
-*.js
-*.d.ts
-*.js.map
-*.tsbuildinfo
-dist
-coverage
-.nyc_output
-.jsii
-
-.LAST_BUILD
-.nycrc
-.LAST_PACKAGE
-*.snk
-
-node_modules
-
-!jest.config.js
-*.d.ts.map
+/coverage/
+/lib/
+/node_modules/
