--- a/packages/@jsii/utils/tsconfig.json
+++ b/packages/@jsii/utils/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../../tsconfig-base",
-  "include": ["**/*.ts"],
-  "exclude": ["jest.config.ts"]
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "lib",
+  },
+  "include": [
+    "src/**/*.ts"
+  ],
 }
