edit contributors manifest

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1402,6 +1402,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "touchez-du-bois",
+      "name": "Takahiro Sugiura",
+      "avatar_url": "https://avatars.githubusercontent.com/u/434017?v=4",
+      "profile": "https://github.com/touchez-du-bois",
+      "contributions": [
+        "doc"
+      ]
     }
   ],
   "repoType": "github",
