update contributors manifest

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1411,6 +1411,15 @@
       "contributions": [
         "doc"
       ]
+    },
+    {
+      "login": "agdimech",
+      "name": "Adrian Dimech",
+      "avatar_url": "https://avatars.githubusercontent.com/u/51220968?v=4",
+      "profile": "https://github.com/agdimech",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "repoType": "github",
