--- a/packages/jsii/package.json
+++ b/packages/jsii/package.json
@@ -39,7 +39,7 @@
     "@jsii/spec": "^0.0.0",
     "case": "^1.6.3",
     "chalk": "^4",
-    "deep-equal": "^2.0.5",
+    "fast-deep-equal": "^3.1.3",
     "fs-extra": "^10.1.0",
     "log4js": "^6.5.2",
     "semver": "^7.3.7",
