--- a/packages/@jsii/benchmarks/package.json
+++ b/packages/@jsii/benchmarks/package.json
@@ -8,6 +8,7 @@
     "fs-extra": "^10.1.0",
     "jsii": "^0.0.0",
     "tar": "^6.1.11",
+    "typescript-3.9": "npm:typescript@~3.9.10",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
