--- a/packages/@jsii/benchmarks/package.json
+++ b/packages/@jsii/benchmarks/package.json
@@ -8,6 +8,7 @@
     "fs-extra": "^10.1.0",
     "jsii": "^0.0.0",
     "tar": "^6.1.11",
+    "typescript-3.9": "npm:typescript@~3.9.10",
     "yargs": "^16.2.0"
   },
   "devDependencies": {
@@ -15,8 +16,8 @@
     "glob": "^8.0.3"
   },
   "scripts": {
-    "build": "tsc --build && npm run lint",
-    "watch": "tsc -w",
+    "build": "yarn --silent tsc --build && npm run lint",
+    "watch": "yarn --silent tsc -w",
     "bench": "node bin/benchmark.js",
     "snapshot": "node scripts/snapshot-package.js",
     "lint": "eslint . --ext .ts --ignore-path=.gitignore",
