--- a/packages/@jsii/spec/package.json
+++ b/packages/@jsii/spec/package.json
@@ -31,7 +31,8 @@
     "package": "package-js"
   },
   "dependencies": {
-    "ajv": "^8.11.0"
+    "ajv": "^8.11.0",
+    "fs-extra": "^10.1.0"
   },
   "devDependencies": {
     "jsii-build-tools": "^0.0.0",
