--- a/packages/@scope/jsii-calc-base-of-base/package.json
+++ b/packages/@scope/jsii-calc-base-of-base/package.json
@@ -58,7 +58,8 @@
     },
     "tsc": {
       "outDir": "./build",
-      "rootDir": "."
+      "rootDir": ".",
+      "types": []
     },
     "versionFormat": "short",
     "metadata": {
