--- a/packages/@scope/jsii-calc-base/package.json
+++ b/packages/@scope/jsii-calc-base/package.json
@@ -72,6 +72,9 @@
         "module": "scope.jsii_calc_base"
       }
     },
+    "tsc": {
+      "types": []
+    },
     "versionFormat": "short"
   }
 }
