--- a/packages/@scope/jsii-calc-lib/package.json
+++ b/packages/@scope/jsii-calc-lib/package.json
@@ -70,7 +70,8 @@
     },
     "tsc": {
       "outDir": "build",
-      "sourceMap": false
+      "sourceMap": false,
+      "types": []
     },
     "versionFormat": "short",
     "metadata": {
