--- a/packages/jsii-rosetta/package.json
+++ b/packages/jsii-rosetta/package.json
@@ -30,7 +30,7 @@
     "@jsii/spec": "0.0.0",
     "commonmark": "^0.30.0",
     "fs-extra": "^10.1.0",
-    "typescript-3.9": "npm:typescript@~3.9.10",
+    "typescript": "~3.9.10",
     "sort-json": "^2.0.1",
     "@xmldom/xmldom": "^0.8.2",
     "workerpool": "^6.2.1",
