--- a/packages/jsii/tsconfig.json
+++ b/packages/jsii/tsconfig.json
@@ -1,9 +1,20 @@
 {
   "extends": "../../tsconfig-base",
-  "include": ["**/*.ts"],
-  "exclude": ["test/negatives/*", "jest.config.ts"],
+  "include": [
+    "**/*.ts"
+  ],
+  "exclude": [
+    "test/negatives/*",
+    "jest.config.ts"
+  ],
   "references": [
-    { "path": "../@jsii/check-node" },
-    { "path": "../@jsii/spec" },
+    {
+      "name": "@jsii/check-node",
+      "path": "../@jsii/check-node"
+    },
+    {
+      "name": "@jsii/spec",
+      "path": "../@jsii/spec"
+    },
   ]
 }
