--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -58,13 +58,17 @@ updates:
     labels:
       - dependencies
       - language/go
-    ignore:
-      - dependency-name: github.com/aws/jsii-runtime-go
-      - dependency-name: github.com/aws/jsii-runtime-go/*
-      - dependency-name: github.com/aws/jsii/jsii-calc/go/*
 
   - package-ecosystem: gomod
     directory: '/packages/@jsii/go-runtime/jsii-runtime-go'
+    schedule:
+      interval: daily
+    labels:
+      - dependencies
+      - language/go
+
+  - package-ecosystem: gomod
+    directory: '/packages/@jsii/go-runtime-test/project'
     schedule:
       interval: daily
     labels:
