--- a/packages/@jsii/spec/package.json
+++ b/packages/@jsii/spec/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "ajv": "^8.11.0",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "tar": "^6.1.11"
   },
   "devDependencies": {
     "jsii-build-tools": "^0.0.0",
