--- a/packages/@jsii/python-runtime/pyproject.toml
+++ b/packages/@jsii/python-runtime/pyproject.toml
@@ -9,3 +9,8 @@ exclude = '\.(git|mypy_cache|env)'
 
 [tool.mypy]
 ignore_missing_imports = true
+
+[tool.pyright]
+pythonVersion = "3.7"
+venv = ".env"
+venvPath = "."
