re-organize code a bit, undo v8-code-cache (does not help)

--- a/packages/@jsii/kernel/package.json
+++ b/packages/@jsii/kernel/package.json
@@ -34,8 +34,7 @@
     "@jsii/spec": "^0.0.0",
     "fs-extra": "^10.1.0",
     "lockfile": "^1.0.4",
-    "tar": "^6.1.11",
-    "v8-compile-cache": "^2.3.0"
+    "tar": "^6.1.11"
   },
   "devDependencies": {
     "@scope/jsii-calc-base": "^0.0.0",
